improved formatting and layout.  navbar should always be fully accessible on desktop.  All content is now scrollable.  Added better formatting on content for mobile when nav bar is open.  Still getting an issue where mouse controls have effect on touch...  Could make it so that, on mobile, the navbar is always smaller than the screen, with ever more aggressive nesting as the screen size shrinks. Still need to finish implementing fluxor.  Need to revert changes so that even the inline editor displays a temp var, rather than the actual state.

--- a/PersonalWebsite/Pages/MainContent.razor.css
+++ b/PersonalWebsite/Pages/MainContent.razor.css
@@ -7,9 +7,9 @@
 
 */
 .mainTable {
-    height: calc(100vh - 56px) !important;
+    height: calc(100vh - 156px) !important;
     width: 100%;
-    overflow: auto !important;
+    /*overflow: auto !important;*/
 }
 
 .kudosText {
@@ -174,25 +174,25 @@ input {
     }
 
 /* width */
-::-webkit-scrollbar {
+/*::-webkit-scrollbar {
     width: 5px;
     border-radius: 0px;
-}
+}*/
 
 /* Track */
-::-webkit-scrollbar-track {
+/*::-webkit-scrollbar-track {
     background: #212529;
     border-radius: 0px;
-}
+}*/
 
 /* Handle */
-::-webkit-scrollbar-thumb {
+/*::-webkit-scrollbar-thumb {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background: #6c757d;
     border-radius: 5px;
-}
+}*/
 
     /* Handle on hover */
-    ::-webkit-scrollbar-thumb:hover {
+    /*::-webkit-scrollbar-thumb:hover {
         background: #555;
-    }
+    }*/
