--- a/PersonalWebsite/wwwroot/css/app.css
+++ b/PersonalWebsite/wwwroot/css/app.css
@@ -129,6 +129,7 @@ a, .btn-link {
 
 /* width */
 ::-webkit-scrollbar {
+    height: 100%;
     width: 5px;
     border-radius: 0px;
 }
@@ -136,7 +137,6 @@ a, .btn-link {
 /* Track */
 ::-webkit-scrollbar-track {
     margin-top: 56px;
-    background: #212529;
     border-radius: 0px;
 }
 
@@ -150,3 +150,36 @@ a, .btn-link {
     ::-webkit-scrollbar-thumb:hover {
         background: #555;
     }
+
+/*
+::-webkit-scrollbar {
+    background: #212529;
+    width: 5px;
+    border-radius: 0px;
+    margin-top: 0px !important;
+    margin-bottom: -50px !important;
+    padding: 0px !important;
+    height: 100%;
+    z-index: 999;
+}
+
+
+::-webkit-scrollbar-track {
+    margin-top: 0px !important;
+    margin-bottom: 0px !important; 
+    padding: 0px !important;
+    height: 100%;
+    background: #212529;
+    border-radius: 0px;
+    z-index: 999;
+}
+
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }*/
